# cicd_pipline_need

./: .gitignore  README.md  pyproject.toml
.github/workflows/: azure_pipeline.yaml
TrainingFT.egg-info/: SOURCES.txt  requires.txt
env/: pyvenv.cfg
outputs/: fraud_detection_model.pkl
src/azureml_train_deploy.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/azuremlapp/: .env
src/azuremlapp/resources/: fraud_transactions.csv
src/azuremlapp/utils/: fraud_train.py  score.py
